done profiling for pagination